# crypto-botters

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: cargo-update.yml  clippy.yml
crypto-botters-api/: Cargo.toml  README.md
crypto-botters-api/src/: lib.rs
crypto-botters-binance/: Cargo.toml  README.md
crypto-botters-binance/src/: lib.rs
crypto-botters-bitflyer/: Cargo.toml  README.md
crypto-botters-bitflyer/src/: lib.rs
crypto-botters-bybit/: Cargo.toml
crypto-botters-bybit/src/: lib.rs
crypto-botters-coincheck/: Cargo.toml
crypto-botters-coincheck/src/: lib.rs
examples/: README.md  binance_http_private.rs  binance_websocket_private.rs  binance_websocket_public.rs  bitFlyer_http_public.rs  bitflyer_websocket_private.rs
examples/binance/: binance_http_private.rs  binance_http_public.rs  binance_spawn.rs  binance_websocket_private.rs  binance_websocket_public.rs
examples/bitbank/: bitbank_http_public.rs
examples/bitflyer/: bitflyer_http_private.rs  bitflyer_http_public.rs  bitflyer_websocket_private.rs  bitflyer_websocket_public.rs
examples/bybit/: bybit_account_asset_v1.rs  bybit_account_asset_v3.rs  bybit_contract.rs  bybit_copy_trading.rs  bybit_inverse_futures.rs  bybit_inverse_perpetual.rs  bybit_spot_v1.rs  bybit_spot_v3.rs  bybit_spot_v3_websocket_private.rs  bybit_unified_margin.rs  bybit_usdc_contract_websocket_public.rs  bybit_usdc_option.rs  bybit_usdc_perpetual.rs  bybit_usdt_perpetual.rs  bybit_v5.rs
examples/bybit/previous_version/: bybit_account_asset_v1.rs  bybit_inverse_futures_v2.rs  bybit_inverse_perpetual_v2.rs  bybit_spot_v1.rs  bybit_usdc_option_v1.rs  bybit_usdc_perpetual_v1.rs  bybit_usdt_contract_websocket_public.rs  bybit_usdt_perpetual.rs  bybit_usdt_perpetual_v2.rs
examples/bybit/v3/: bybit_spot_v3.rs  bybit_spot_v3_websocket_private.rs  bybit_spot_v3_websocket_public.rs  bybit_unified_margin_v3.rs  bybit_usdc_contract_v3_websocket_public.rs  bybit_usdt_contract_v3_websocket_public.rs
examples/bybit/v5/: bybit_v5_websocket_private.rs  bybit_v5_websocket_public.rs
examples/coincheck/: coincheck_http_private.rs  coincheck_http_public.rs  coincheck_websocket_public.rs
generic-api-client/: CHANGELOG.md  Cargo.toml  README.md
generic-api-client/src/: http.rs  lib.rs  websocket.rs
src/: exchanges.rs  lib.rs  traits.rs
src/exchanges/: binance.rs  bitbank.rs  bitflyer.rs  bybit.rs  coincheck.rs
