[workspace]

[package]
name = "crypto-botters"
version = "0.2.0"
authors = ["negi_grass"]
edition = "2021"
description = "A crate for interacting with various cryptocurrency exchanges."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/negi-grass/crypto-botters"
documentation = "https://docs.rs/crypto-botters"
repository = "https://github.com/negi-grass/crypto-botters"
keywords = ["cryptocurrency", "finance", "trading", "client", "websocket"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "authentication"]
autoexamples = false

[package.metadata.docs.rs]
all-features = true

[features]
full = ["binance", "bitflyer", "bybit"]
binance = ["dep:crypto-botters-binance"]
bitflyer = ["dep:crypto-botters-bitflyer"]
bybit = ["dep:crypto-botters-bybit"]

[dependencies]
generic-api-client = { version = "0.1", path = "generic-api-client" }
crypto-botters-api = { version = "0.1", path = "crypto-botters-api" }
crypto-botters-binance = { version = "0.2", path = "crypto-botters-binance", optional = true }
crypto-botters-bitflyer = { version = "0.2", path = "crypto-botters-bitflyer", optional = true }
crypto-botters-bybit = { version = "0.1", path = "crypto-botters-bybit", optional = true }

[dev-dependencies]
crypto-botters = { path = ".", features = ["full"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
rust_decimal = { version = "1.27.0", features = ["serde-with-str", "serde-with-float"] }
env_logger = "0.10.0"
log = "0.4.17"

[[example]]
name = "binance_http_private"
path = "examples/binance/binance_http_private.rs"

[[example]]
name = "binance_http_public"
path = "examples/binance/binance_http_public.rs"

[[example]]
name = "binance_websocket_private"
path = "examples/binance/binance_websocket_private.rs"

[[example]]
name = "binance_websocket_public"
path = "examples/binance/binance_websocket_public.rs"

[[example]]
name = "binance_spawn"
path = "examples/binance/binance_spawn.rs"

[[example]]
name = "bitflyer_http_private"
path = "examples/bitflyer/bitflyer_http_private.rs"

[[example]]
name = "bitflyer_http_public"
path = "examples/bitflyer/bitflyer_http_public.rs"

[[example]]
name = "bitflyer_websocket_private"
path = "examples/bitflyer/bitflyer_websocket_private.rs"

[[example]]
name = "bitflyer_websocket_public"
path = "examples/bitflyer/bitflyer_websocket_public.rs"

[[example]]
name = "bybit_unified_margin"
path = "examples/bybit/bybit_unified_margin.rs"

[[example]]
name = "bybit_contract"
path = "examples/bybit/bybit_contract.rs"

[[example]]
name = "bybit_inverse_perpetual"
path = "examples/bybit/bybit_inverse_perpetual.rs"

[[example]]
name = "bybit_usdt_perpetual"
path = "examples/bybit/bybit_usdt_perpetual.rs"

[[example]]
name = "bybit_inverse_futures"
path = "examples/bybit/bybit_inverse_futures.rs"

[[example]]
name = "bybit_spot_v3"
path = "examples/bybit/bybit_spot_v3.rs"

[[example]]
name = "bybit_spot_v1"
path = "examples/bybit/bybit_spot_v1.rs"

[[example]]
name = "bybit_account_asset_v3"
path = "examples/bybit/bybit_account_asset_v3.rs"

[[example]]
name = "bybit_account_asset_v1"
path = "examples/bybit/bybit_account_asset_v1.rs"

[[example]]
name = "bybit_copy_trading"
path = "examples/bybit/bybit_copy_trading.rs"

[[example]]
name = "bybit_usdc_option"
path = "examples/bybit/bybit_usdc_option.rs"

[[example]]
name = "bybit_usdc_perpetual"
path = "examples/bybit/bybit_usdc_perpetual.rs"
