[workspace]
members = ["crypto-botters-api", "crypto-botters-binance", "crypto-botters-bitflyer", "crypto-botters-bybit", "crypto-botters-coincheck"]

[package]
name = "crypto-botters"
version = "0.4.3"
authors = ["negi_grass"]
edition = "2021"
description = "A crate for interacting with various cryptocurrency exchanges."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/negi-grass/crypto-botters"
documentation = "https://docs.rs/crypto-botters"
repository = "https://github.com/negi-grass/crypto-botters"
keywords = ["cryptocurrency", "finance", "trading", "client", "websocket"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "authentication"]
autoexamples = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["native-tls"]

full = ["binance", "bitflyer", "bybit", "coincheck"]
binance = ["dep:crypto-botters-binance"]
bitflyer = ["dep:crypto-botters-bitflyer"]
bybit = ["dep:crypto-botters-bybit"]
coincheck = ["dep:crypto-botters-coincheck"]

native-tls = ["generic-api-client/native-tls"]
native-tls-vendored = ["generic-api-client/native-tls-vendored"]
rustls-tls-native-roots = ["generic-api-client/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["generic-api-client/rustls-tls-webpki-roots"]

[dependencies]
generic-api-client = { version = "0.2", path = "generic-api-client" }
crypto-botters-api = { version = "0.1", path = "crypto-botters-api" }
crypto-botters-binance = { version = "0.3", path = "crypto-botters-binance", optional = true }
crypto-botters-bitflyer = { version = "0.3", path = "crypto-botters-bitflyer", optional = true }
crypto-botters-bybit = { version = "0.2", path = "crypto-botters-bybit", optional = true }
crypto-botters-coincheck = { version = "0.1", path = "crypto-botters-coincheck", optional = true }

[dev-dependencies]
crypto-botters = { path = ".", features = ["full"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
rust_decimal = { version = "1.28.1", features = ["serde-with-str", "serde-with-float"] }
env_logger = "0.10.0"
log = "0.4.17"

[[example]]
name = "binance_http_private"
path = "examples/binance/binance_http_private.rs"

[[example]]
name = "binance_http_public"
path = "examples/binance/binance_http_public.rs"

[[example]]
name = "binance_websocket_private"
path = "examples/binance/binance_websocket_private.rs"

[[example]]
name = "binance_websocket_public"
path = "examples/binance/binance_websocket_public.rs"

[[example]]
name = "binance_spawn"
path = "examples/binance/binance_spawn.rs"

[[example]]
name = "bitflyer_http_private"
path = "examples/bitflyer/bitflyer_http_private.rs"

[[example]]
name = "bitflyer_http_public"
path = "examples/bitflyer/bitflyer_http_public.rs"

[[example]]
name = "bitflyer_websocket_private"
path = "examples/bitflyer/bitflyer_websocket_private.rs"

[[example]]
name = "bitflyer_websocket_public"
path = "examples/bitflyer/bitflyer_websocket_public.rs"

[[example]]
name = "bybit_unified_margin"
path = "examples/bybit/bybit_unified_margin.rs"

[[example]]
name = "bybit_contract"
path = "examples/bybit/bybit_contract.rs"

[[example]]
name = "bybit_inverse_perpetual"
path = "examples/bybit/bybit_inverse_perpetual.rs"

[[example]]
name = "bybit_usdt_perpetual"
path = "examples/bybit/bybit_usdt_perpetual.rs"

[[example]]
name = "bybit_inverse_futures"
path = "examples/bybit/bybit_inverse_futures.rs"

[[example]]
name = "bybit_spot_v3"
path = "examples/bybit/bybit_spot_v3.rs"

[[example]]
name = "bybit_spot_v1"
path = "examples/bybit/bybit_spot_v1.rs"

[[example]]
name = "bybit_account_asset_v3"
path = "examples/bybit/bybit_account_asset_v3.rs"

[[example]]
name = "bybit_account_asset_v1"
path = "examples/bybit/bybit_account_asset_v1.rs"

[[example]]
name = "bybit_copy_trading"
path = "examples/bybit/bybit_copy_trading.rs"

[[example]]
name = "bybit_usdc_option"
path = "examples/bybit/bybit_usdc_option.rs"

[[example]]
name = "bybit_usdc_perpetual"
path = "examples/bybit/bybit_usdc_perpetual.rs"

[[example]]
name = "bybit_usdt_contract_websocket_public"
path = "examples/bybit/bybit_usdt_contract_websocket_public.rs"

[[example]]
name = "bybit_usdc_contract_websocket_public"
path = "examples/bybit/bybit_usdc_contract_websocket_public.rs"

[[example]]
name = "bybit_spot_v3_websocket_public"
path = "examples/bybit/bybit_spot_v3_websocket_public.rs"

[[example]]
name = "bybit_spot_v3_websocket_private"
path = "examples/bybit/bybit_spot_v3_websocket_private.rs"

[[example]]
name = "coincheck_http_public"
path = "examples/coincheck/coincheck_http_public.rs"

[[example]]
name = "coincheck_http_private"
path = "examples/coincheck/coincheck_http_private.rs"

[[example]]
name = "coincheck_websocket_public"
path = "examples/coincheck/coincheck_websocket_public.rs"
