[package]
name = "crypto-botters-binance"
version = "0.3.1"
authors = ["negi_grass"]
edition = "2021"
description = "A crate for interacting with the Binance API."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/negi-grass/crypto-botters"
documentation = "https://docs.rs/crypto-botters-binance"
repository = "https://github.com/negi-grass/crypto-botters"
keywords = ["cryptocurrency", "binance", "trading", "client", "websocket"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "authentication"]

[dependencies]
generic-api-client = { version = "0.2", path = "../generic-api-client" }
crypto-botters-api = { version = "0.1", path = "../crypto-botters-api" }
serde = { version = "1.0.151", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.93"
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
log = "0.4.17"
