[package]
name = "crypto-botters-bitflyer"
version = "0.1.0"
authors = ["negi_grass"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["cryptocurrency", "bitFlyer", "trading", "client", "websocket"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "authentication"]

[dependencies]
generic-api-client = { version = "0.1", path = "../generic-api-client" }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
log = "0.4.17"
