[package]
name = "crypto-botters-bitflyer"
version = "0.3.2"
authors = ["negi_grass"]
edition = "2021"
description = "A crate for interacting with the bitFlyer API."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/negi-grass/crypto-botters"
documentation = "https://docs.rs/crypto-botters-bitflyer"
repository = "https://github.com/negi-grass/crypto-botters"
keywords = ["cryptocurrency", "bitFlyer", "trading", "client", "websocket"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "authentication"]

[dependencies]
generic-api-client = { version = "0.2", path = "../generic-api-client" }
crypto-botters-api = { version = "0.1", path = "../crypto-botters-api" }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.94"
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
log = "0.4.17"
