[package]
name = "crypto-botters-bybit"
version = "0.2.2"
authors = ["negi_grass"]
edition = "2021"
description = "A crate for interacting with the bybit API."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/negi-grass/crypto-botters"
documentation = "https://docs.rs/crypto-botters-bybit"
repository = "https://github.com/negi-grass/crypto-botters"
keywords = ["cryptocurrency", "Bybit", "trading", "client", "websocket"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "authentication"]

[dependencies]
generic-api-client = { version = "0.2", path = "../generic-api-client" }
crypto-botters-api = { version = "0.1", path = "../crypto-botters-api" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
log = "0.4.17"
