[package]
name = "generic-api-client"
version = "0.1.4"
authors = ["negi_grass"]
edition = "2021"
description = "A client for HTTP/HTTPS/WebSocket APIs."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/negi-grass/crypto-botters/tree/main/generic-api-client"
documentation = "https://docs.rs/generic-api-client"
repository = "https://github.com/negi-grass/crypto-botters/tree/main/generic-api-client"
keywords = ["client", "websocket", "asynchronous"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tokio = { version = "1.25.0", features = ["time", "sync", "net", "macros"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
reqwest = "0.11.14"
futures-util = "0.3.26"
serde = "1.0.152"
parking_lot = "0.12.1"
bytes = "1.3.0"
log = "0.4.17"
thiserror = "1.0.38"
