[package]
name = "generic-api-client"
version = "0.2.1"
authors = ["negi_grass"]
edition = "2021"
description = "A client for HTTP/HTTPS/WebSocket APIs."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/negi-grass/crypto-botters/tree/main/generic-api-client"
documentation = "https://docs.rs/generic-api-client"
repository = "https://github.com/negi-grass/crypto-botters/tree/main/generic-api-client"
keywords = ["client", "websocket", "asynchronous"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tokio = { version = "1.26.0", features = ["time", "sync", "net", "macros"] }
tokio-tungstenite = "0.20.0"
reqwest = "0.11.14"
futures-util = "0.3.26"
serde = "1.0.171"
parking_lot = "0.12.1"
bytes = "1.4.0"
log = "0.4.17"
thiserror = "1.0.40"

[features]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots", "tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots", "tokio-tungstenite/rustls-tls-webpki-roots"]
